--- a/iBank/iBank/view/bankCells.xib
+++ b/iBank/iBank/view/bankCells.xib
@@ -117,7 +117,7 @@
                         <color key="backgroundColor" red="0.90196078430000004" green="0.90196078430000004" blue="0.90196078430000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                     <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Y0U-pp-6W2" userLabel="bg1">
-                        <rect key="frame" x="165" y="0.0" width="814" height="47"/>
+                        <rect key="frame" x="165" y="0.0" width="649" height="47"/>
                         <color key="backgroundColor" red="0.99607843139999996" green="0.96470588239999999" blue="0.93333333330000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="RMB" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4KL-4V-3Ea">
@@ -127,7 +127,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TE0-MX-Mfh" userLabel="bg2">
-                        <rect key="frame" x="165" y="47" width="814" height="47"/>
+                        <rect key="frame" x="165" y="47" width="649" height="47"/>
                         <color key="backgroundColor" red="1" green="0.86666666670000003" blue="0.73333333329999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                     <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4P0-yZ-sI7" userLabel="h1">
@@ -224,8 +224,8 @@
                         <color key="backgroundColor" red="0.90196078430000004" green="0.90196078430000004" blue="0.90196078430000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                     <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Qf3-np-8DI" userLabel="bg1">
-                        <rect key="frame" x="165" y="0.0" width="814" height="47"/>
-                        <color key="backgroundColor" red="0.99607843139999996" green="0.96470588239999999" blue="0.93333333330000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <rect key="frame" x="165" y="0.0" width="649" height="47"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="RMB" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gB2-G2-isw">
                         <rect key="frame" x="165" y="0.0" width="45" height="46"/>
@@ -281,8 +281,9 @@
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="xeZ-0d-JYc" id="P7O-Gc-vCU">
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="超数集团" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XP5-0g-fVf">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="超数集团" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XP5-0g-fVf">
                         <rect key="frame" x="0.0" y="0.0" width="90" height="141"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="90" id="SD7-dC-UA2"/>
                         </constraints>
@@ -290,7 +291,7 @@
                         <color key="textColor" red="0.4392156862745098" green="0.4392156862745098" blue="0.4392156862745098" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="erM-Zw-7Sa" userLabel="v1">
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="erM-Zw-7Sa" userLabel="v1">
                         <rect key="frame" x="89" y="0.0" width="1" height="141"/>
                         <color key="backgroundColor" red="0.90196078431372551" green="0.90196078431372551" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -299,23 +300,33 @@
                     </view>
                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="eAT-xd-3AW">
                         <rect key="frame" x="90" y="0.0" width="814" height="140.5"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <connections>
                             <outlet property="dataSource" destination="xeZ-0d-JYc" id="JjT-4y-vNA"/>
                             <outlet property="delegate" destination="xeZ-0d-JYc" id="y9J-9a-mF3"/>
                         </connections>
                     </tableView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="s9v-kz-W8B" userLabel="bottomLine">
+                        <rect key="frame" x="0.0" y="139.5" width="904" height="1"/>
+                        <color key="backgroundColor" red="0.90196078431372551" green="0.90196078431372551" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="rHf-Dv-4Iz"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="s9v-kz-W8B" firstAttribute="leading" secondItem="P7O-Gc-vCU" secondAttribute="leading" id="3Ji-jS-nJ2"/>
                     <constraint firstAttribute="bottom" secondItem="erM-Zw-7Sa" secondAttribute="bottom" id="Aoh-qX-Zmq"/>
                     <constraint firstItem="erM-Zw-7Sa" firstAttribute="top" secondItem="P7O-Gc-vCU" secondAttribute="top" id="F3m-v9-6p7"/>
                     <constraint firstAttribute="trailing" secondItem="eAT-xd-3AW" secondAttribute="trailing" id="FGv-q3-rCO"/>
                     <constraint firstItem="XP5-0g-fVf" firstAttribute="top" secondItem="P7O-Gc-vCU" secondAttribute="top" id="J8d-5m-wP4"/>
                     <constraint firstAttribute="bottom" secondItem="eAT-xd-3AW" secondAttribute="bottom" id="Kfq-wC-q96"/>
+                    <constraint firstAttribute="bottom" secondItem="s9v-kz-W8B" secondAttribute="bottom" id="MCp-Jo-5eR"/>
                     <constraint firstItem="eAT-xd-3AW" firstAttribute="leading" secondItem="P7O-Gc-vCU" secondAttribute="leading" constant="90" id="O9A-cf-zAk"/>
                     <constraint firstItem="XP5-0g-fVf" firstAttribute="leading" secondItem="P7O-Gc-vCU" secondAttribute="leading" id="XOU-uO-lEn"/>
                     <constraint firstAttribute="bottom" secondItem="XP5-0g-fVf" secondAttribute="bottom" id="dyo-Hg-9LN"/>
                     <constraint firstItem="eAT-xd-3AW" firstAttribute="top" secondItem="P7O-Gc-vCU" secondAttribute="top" id="m0i-3f-AoC"/>
+                    <constraint firstAttribute="trailing" secondItem="s9v-kz-W8B" secondAttribute="trailing" id="qAY-Go-6KQ"/>
                     <constraint firstItem="erM-Zw-7Sa" firstAttribute="leading" secondItem="P7O-Gc-vCU" secondAttribute="leading" constant="89" id="yQ1-7T-oKl"/>
                 </constraints>
             </tableViewCellContentView>
@@ -331,7 +342,7 @@
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Nce-IU-FpG" id="mwz-Sf-6vd">
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="中国银行" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eOt-ce-bSZ">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="中国银行" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eOt-ce-bSZ">
                         <rect key="frame" x="0.0" y="0.0" width="90" height="141"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="90" id="olr-lV-q4g"/>
@@ -340,7 +351,14 @@
                         <color key="textColor" red="0.43921568630000002" green="0.43921568630000002" blue="0.43921568630000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Mjw-vb-Bg5" userLabel="v1">
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1zz-kr-tZc" userLabel="v0">
+                        <rect key="frame" x="0.0" y="0.0" width="1" height="140"/>
+                        <color key="backgroundColor" red="0.90196078430000004" green="0.90196078430000004" blue="0.90196078430000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="1" id="sLW-jo-CMv"/>
+                        </constraints>
+                    </view>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mjw-vb-Bg5" userLabel="v1">
                         <rect key="frame" x="89" y="0.0" width="1" height="141"/>
                         <color key="backgroundColor" red="0.90196078431372551" green="0.90196078431372551" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -355,16 +373,29 @@
                             <outlet property="delegate" destination="Nce-IU-FpG" id="GK3-wI-bjl"/>
                         </connections>
                     </tableView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dpW-dH-I01" userLabel="v2">
+                        <rect key="frame" x="991" y="0.0" width="1" height="141"/>
+                        <color key="backgroundColor" red="0.90196078430000004" green="0.90196078430000004" blue="0.90196078430000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="1" id="WBv-Pg-ee0"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
                     <constraint firstItem="eOt-ce-bSZ" firstAttribute="top" secondItem="mwz-Sf-6vd" secondAttribute="top" id="2ZH-cl-kiz"/>
+                    <constraint firstAttribute="bottom" secondItem="dpW-dH-I01" secondAttribute="bottom" id="CiU-Wc-KMi"/>
                     <constraint firstItem="eOt-ce-bSZ" firstAttribute="leading" secondItem="mwz-Sf-6vd" secondAttribute="leading" id="Dh2-1w-pdE"/>
                     <constraint firstItem="Mjw-vb-Bg5" firstAttribute="top" secondItem="mwz-Sf-6vd" secondAttribute="top" id="EXh-vJ-nTJ"/>
+                    <constraint firstAttribute="bottom" secondItem="1zz-kr-tZc" secondAttribute="bottom" constant="0.5" id="Hit-PY-XVo"/>
                     <constraint firstItem="Mjw-vb-Bg5" firstAttribute="leading" secondItem="mwz-Sf-6vd" secondAttribute="leading" constant="89" id="VF2-2H-hWp"/>
+                    <constraint firstItem="1zz-kr-tZc" firstAttribute="top" secondItem="mwz-Sf-6vd" secondAttribute="top" id="YpJ-fW-0HG"/>
                     <constraint firstItem="NWV-vY-cXc" firstAttribute="leading" secondItem="mwz-Sf-6vd" secondAttribute="leading" constant="90" id="eS3-T2-cpQ"/>
+                    <constraint firstAttribute="trailing" secondItem="dpW-dH-I01" secondAttribute="trailing" id="fBQ-so-XKg"/>
                     <constraint firstAttribute="bottom" secondItem="NWV-vY-cXc" secondAttribute="bottom" id="g8C-Ik-4hk"/>
                     <constraint firstItem="NWV-vY-cXc" firstAttribute="top" secondItem="mwz-Sf-6vd" secondAttribute="top" id="hpE-iY-xG2"/>
+                    <constraint firstItem="1zz-kr-tZc" firstAttribute="leading" secondItem="mwz-Sf-6vd" secondAttribute="leading" id="jko-Uc-7V9"/>
                     <constraint firstAttribute="trailing" secondItem="NWV-vY-cXc" secondAttribute="trailing" id="qG8-qs-FuE"/>
+                    <constraint firstItem="dpW-dH-I01" firstAttribute="top" secondItem="mwz-Sf-6vd" secondAttribute="top" id="u33-nH-Bvl"/>
                     <constraint firstAttribute="bottom" secondItem="Mjw-vb-Bg5" secondAttribute="bottom" id="vN5-XS-6M6"/>
                     <constraint firstAttribute="bottom" secondItem="eOt-ce-bSZ" secondAttribute="bottom" id="vcW-lV-tPd"/>
                 </constraints>
